Fix letter spacing and remove frameborder from iframe

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -199,7 +199,7 @@ ul {
     display: flex;
     justify-content: center;
     font-size: 55px;
-    letter-spacing: 5px;
+    letter-spacing: 2px;
     text-align: center;
 }
 
@@ -237,6 +237,7 @@ ul {
     text-align: center;
     margin: 20px 100px 0 100px;
     font-size: 20px;
+    letter-spacing: inherit;
 }
 
 .guide-paragraph, iframe {
